--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,12 @@
 {
     "name": "hexlet/code",
-    "bin": ["bin/brain-games"],
+    "bin": [
+    "bin/brain-games",
+    "bin/brain-even",
+    "bin/brain-calc",
+    "bin/brain-gcd",
+    "bin/brain-progression",
+    "bin/brain-prime"],
     
     "autoload": {
         "psr-4": {
@@ -13,10 +19,15 @@
         }
     ],
     "description": "brain-games project",
+    "scripts": {
+        "phpcs": "phpcs" 
+    },
+    "license": "proprietary",
     "require": {
         "wp-cli/php-cli-tools": "^0.12.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^12.0"
+        "phpunit/phpunit": "^12.0",
+        "squizlabs/php_codesniffer": "*"
     }
 }
