--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,11 @@
     "autoload": {
         "psr-4": {
             "Hexlet\\Code\\": "src/"
-        }
+        },   
+         "files": [
+            "src/cli.php"
+        ]
+    
     },
     "authors": [
         {
