--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,28 @@
 {
     "name": "hexlet/code",
-    "bin": [
-    "bin/brain-games",
-    "bin/brain-even",
-    "bin/brain-calc",
-    "bin/brain-gcd",
-    "bin/brain-progression",
-    "bin/brain-prime"],
-    
-    "autoload": {
-        "files": [
-            "src/cli.php"
-        ]
-    
-    },
+    "description": "brain-games project",
+    "license": "proprietary",
     "authors": [
         {
             "name": "egor"
         }
     ],
-    "description": "brain-games project",
-    "scripts": {
-        "phpcs": "phpcs" 
+    "bin": [
+        "bin/brain-games"
+    ],
+    "autoload": {
+        "files": [
+            "src/cli.php"
+        ]
     },
-    "license": "proprietary",
     "require": {
         "wp-cli/php-cli-tools": "^0.12.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^12.0",
         "squizlabs/php_codesniffer": "*"
+    },
+    "scripts": {
+        "phpcs": "phpcs"
     }
 }
